syntax = "proto3";

package engelsjk.faadb.active;
option go_package = "github.com/engelsjk/faadb/rpc/active;active";

// Active service.
service Active {
  // GetAircraft returns a Aircraft from a Query.
  rpc GetAircraft(Query) returns (Aircraft);
}

// Query for Aircraft.
message Query {
  string NNumber = 1;
  string SerialNumber = 2;
  string ModeSCodeHex = 3;
  string RegistrantName = 4; 
  string RegistrantStreet1 = 5;  
  string RegistrantState = 6;
  string AircraftModelCode = 7;
  string ApprovedOperationCode = 8;
  string AirworthinessClassificationCode = 9;
}

// A.
message A {
  string NNumber = 1;
  string SerialNumber = 2;
  string ManufacturerAircraftModelCode = 3;
  string ManufacturerEngineModelCode = 4;
  string ManufacturerYear = 5;
  string RegistrantType = 6;
  string RegistrantName = 7;
  string RegistrantStreet1 = 8;
  string RegistrantStreet2 = 9;
  string RegistrantCity = 10;
  string RegistrantState = 11;
  string RegistrantZipCode = 12;
  string RegistrantRegion = 13;
  string RegistrantCounty = 14;
  string RegistrantCountry = 15;
  string LastActivityDate = 16;
  string CertificationIssueDate = 17;
  string CertificationAirworthinessClassificationCode = 18;
  string CertificationAirworthinessClassificationDescription = 19;
  string CertificationApprovedOperationCode = 20;
  string CertificationApprovedOperationDescription = 21;
  string AircraftType = 22;
  string EngineType = 23;
  string Status = 24;
  string ModeSCode = 25;
  string ModeSCodeHex = 26;
  string AirworthinessDate = 27;
  bool OwnershipFractional = 28;
  string OwnershipOtherName1 = 29;
  string OwnershipOtherName2 = 30;
  string OwnershipOtherName3 = 31;
  string OwnershipOtherName4 = 32;
  string OwnershipOtherName5 = 33;
  string ExpirationDate = 34;
  string UniqueID = 35;
  string KitManufacturerName = 36;
  string KitModelName = 37;
}

message Aircraft {
  repeated A A = 1;
}