syntax = "proto3";

package engelsjk.faadb.aircraft;
option go_package = "github.com/engelsjk/faadb/rpc/aircraft;aircraft";

// Aircraft service.
service Aircraft {
  // GetAircraftType returns an Aircraft Manufacturer/Model/Series from a Query.
  rpc GetAircraftType(Query) returns (AircraftType);
}

// Query of an Aircraft Manufacturer/Model/Series
message Query {
  string ManufacturerModelSeries = 1; // must be > 0
}

// AircraftType.
message AircraftType {
  string ManufacturerModelSeriesCode = 1;
  string ManufacturerName = 2;
  string ModelName = 3;
  string AircraftType = 4;
  string EngineType = 5;          
  string AircraftCategoryCode = 6;
  string BuilderCertificationCode = 7;
  int32 NumberOfEngines = 8;
  int32 NumberOfSeats = 9;
  string AircraftWeight = 10;
  int32 AircraftCruisingSpeed = 11;
  string TCDataSheet = 12;
  string TCDataHolder = 13;
}